# NGrams

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  bigrams-no-rare.json  bigrams-typed.json  pyproject.toml  requirements.txt
src/: char_category.py  main.py  rarest_char.py
